tests/bad/duplicate_functions.glaz
fn xx() {}

fn xx() {}

fn main() {
  xx();
}
